; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_en_fs.c_mlx5e_set_inner_ttc_ft_params.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_en_fs.c_mlx5e_set_inner_ttc_ft_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ttc_params = type { %struct.mlx5_flow_table_attr }
%struct.mlx5_flow_table_attr = type { i32, i32, i32 }

@MLX5E_INNER_TTC_TABLE_SIZE = common dso_local global i32 0, align 4
@MLX5E_INNER_TTC_FT_LEVEL = common dso_local global i32 0, align 4
@MLX5E_NIC_PRIO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mlx5e_set_inner_ttc_ft_params(%struct.ttc_params* %0) #0 {
  %2 = alloca %struct.ttc_params*, align 8
  %3 = alloca %struct.mlx5_flow_table_attr*, align 8
  store %struct.ttc_params* %0, %struct.ttc_params** %2, align 8
  %4 = load %struct.ttc_params*, %struct.ttc_params** %2, align 8
  %5 = getelementptr inbounds %struct.ttc_params, %struct.ttc_params* %4, i32 0, i32 0
  store %struct.mlx5_flow_table_attr* %5, %struct.mlx5_flow_table_attr** %3, align 8
  %6 = load i32, i32* @MLX5E_INNER_TTC_TABLE_SIZE, align 4
  %7 = load %struct.mlx5_flow_table_attr*, %struct.mlx5_flow_table_attr** %3, align 8
  %8 = getelementptr inbounds %struct.mlx5_flow_table_attr, %struct.mlx5_flow_table_attr* %7, i32 0, i32 2
  store i32 %6, i32* %8, align 4
  %9 = load i32, i32* @MLX5E_INNER_TTC_FT_LEVEL, align 4
  %10 = load %struct.mlx5_flow_table_attr*, %struct.mlx5_flow_table_attr** %3, align 8
  %11 = getelementptr inbounds %struct.mlx5_flow_table_attr, %struct.mlx5_flow_table_attr* %10, i32 0, i32 1
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @MLX5E_NIC_PRIO, align 4
  %13 = load %struct.mlx5_flow_table_attr*, %struct.mlx5_flow_table_attr** %3, align 8
  %14 = getelementptr inbounds %struct.mlx5_flow_table_attr, %struct.mlx5_flow_table_attr* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
